27.08.16 - Rewriting starting from Analyser